# clone_futurexlib

./: CMakeLists.txt  CONTRIBUTING.md  Ext_dependence.dot  README.md  Xfiles_dependence.dot
Trellis/: CMakeLists.txt
Trellis/AOMD/: CMakeLists.txt
Trellis/AOMD/cint/: AOMD.cc  AOMD.h  AOMDInternals.h  AOMDList.h  AOMD_Defs.h  AOMD_Entity.cc  AOMD_Exist.cc  AOMD_FlexDB.cc  AOMD_Internals.cc  AOMD_Internals.h  AOMD_Mesh.cc  AOMD_Mod.cc  AOMD_cint.h  MSops.h  PAOMD_Internals.cc  PARALLEL.cc
Trellis/AOMD/include/: AOMD_LoadBalancer.h  AOMD_METIS_Partitioner.h  AOMD_OwnerManager.h  AOMD_SharedInfo.h  AOMD_ZoltanLoadBalancer.h  AOMDfwd.h  MeshModel.h  ParUtil.h  mAOMD.h  mAttachableDataContainer.h  mBuildAdj.h  mCommonBdry.h  mDebugUtil.h  mEdge.h  mEntity.h  mEntityContainer.h  mException.h  mExchangeData.h  mExchangeDataGeneric.h  mFace.h  mGeomSearch.h  mHex.h  mIdGenerator.h  mIterator.h  mIteratorNew.h  mMesh.h  mMigrateUtil.h  mMirrorEntity.h  mParallelUtility.h  mPrism.h  mPyramid.h  mRegion.h  mTet.h  mUnits.h  mVertex.h  pmEntity.h  pmGraphs.h
Trellis/AOMD/parallel/: AOMDBdryLinkSetup.cc  AOMD_OwnerManager.cc  mExchangeData.cc  mMigrateUtil.cc
Trellis/AOMD/pmodel/: ParUtil.cc  pmEntity.cc  pmMeshEntity.cc  pmModelUtil.cc
Trellis/Util/: CMakeLists.txt  Changes
Trellis/model/: CMakeLists.txt  Changes  doxygen.config
xAnalyticalSolution/: CMakeLists.txt
xAnalyticalSolution/Elasticity2D/: complexPotential.cc  complexPotential.h
xCrack/: CMakeLists.txt
xCrack/src/: CrackPostpro.cc  CrackPostpro.h  ExportSensors.cc  ExportSensors.h  FunctionCrackXFEM.cc  FunctionCrackXFEM.h  IntegratorCrack.cc  IntegratorCrack.h  IntegratorSingularCrack2D.cc  IntegratorSingularCrack2D.h  IntegratorSingularCrack3D.cc  IntegratorSingularCrack3D.h  Jint3D.cc  Jint3D.h  JintModalParks.cc  JintModalParks.h  JintParks.cc  JintParks.h  SingularCrackMapping.cc  SingularCrackMapping.h  lCrack.cc  lCrack.h  xCrackGeometry.h  xGatherMesh.cc  xGatherMesh.h  xcAnalyticalSolutions.cc  xcAnalyticalSolutions.h  xcCrackBase.h  xcFilters.h  xcFormLinearEnergyRelease.cc  xcFormLinearEnergyRelease.h  xcFront.cc  xcFront.h  xcFrontDomain.cc  xcFrontDomain.h  xcFrontDomainManager.cc  xcFrontDomainManager.h  xcFrontManager.cc  xcFrontManager.h  xcFrontPart.cc  (+9 more)
xCut/xLegacySimpleCut/: CMakeLists.txt
xExport/: CMakeLists.txt
xExport/src/: xExport.cc  xExport.h  xExportAlgorithm.cc  xExportAlgorithm.h  xExportEnsight.cc  xExportEnsight.h  xExportGmsh.cc  xExportGmsh.h  xExportGmsh_imp.h  xExportManager.cc  xExportManager.h  xExportTranslate.cc  xExportTranslate.h  xPostPro.cc  xPostPro.h  xPostProMSH.cc  xPostProMSH.h  xPostProVTU.cc  xPostProVTU.h  xPostProcessingManager.cc  xPostProcessingManager.h  xSensors.cc  xSensors.h
xFEM/: CMakeLists.txt
xFEM/attic/: xAttachableExtendShapeFcts.h
xFEM/src/: xAlgorithm.cc  xAlgorithm.h  xApplyCommandOnIntegrationRule.h  xApproxFctPtr.h  xApproxFunction.cc  xApproxFunction.h  xApproxFunctionBySupportComponent.cc  xApproxFunctionBySupportComponent.h  xApproxFunctionCorrectedShifted.cc  xApproxFunctionCorrectedShifted.h  xApproxFunctionDerivDiscXFEMOctree.h  xApproxFunctionExtendedShape.cc  xApproxFunctionExtendedShape.h  xApproxFunctionHighOrder.cc  xApproxFunctionHighOrder.h  xApproxFunctionHighOrderBernsteinQH.cc  xApproxFunctionHighOrderHierarchicalLegendreQH.cc  xApproxFunctionHighOrderLagrangeQH.cc  xApproxFunctionHighOrderQH.cc  xApproxFunctionHighOrderQH.h  xAssembler.h  xAssemblerDispatcher.h  xAssemblerDispatcherTraitPolicy.h  xAssemblerDispatcher_imp.h  xAssemblerTraitPolicy.h  xCommandOnGeomElem.cc  xCommandOnGeomElem.h  xData.cc  xData.h  xDataExchangerTools.cc  xDataExchangerTools.h  xDebug.cc  xDebug.h  xDispatcher.h  xDistStateOfValue.h  xDistStateOfValue_imp.h  xDomain.h  xElement.cc  xElement.h  xElementAccess.h  (+121 more)
xFEM/test/: CMakeLists.txt
xFastMarching/: CMakeLists.txt
xFastMarching/src/: FM.h  FMDataExchanger.h  FMDist.h  FMDistInternal.h  FMEntityStorage.h  FMInternal.h  FMUpdater.h  FMUpdaterDist.h  FMUtil.h  linearalgebra3d.h  linearalgebra3dPackUnPack.h  meshinterfaceAOMD.h  meshinterfacexHM.h  meshinterfacexRegion.h
xGeom/xDistanceNearest/: CMakeLists.txt
xGeom/xGeomTools/: CMakeLists.txt
xGeom/xScanElement/: CMakeLists.txt
xGraph/: CMakeLists.txt
xInterface/AOMD/: CMakeLists.txt
xInterface/xMeshInterface/: CMakeLists.txt
xInterface/xOctree/: CMakeLists.txt
xInterface/xTemplateRefineMesh/: CMakeLists.txt
xLinAlg/: CMakeLists.txt
xLinAlg/xInterfaceLapack/: CMakeLists.txt
xLinAlg/xInterfaceMumps/: CMakeLists.txt
xLinAlg/xInterfaceSuperLu/: CMakeLists.txt
xLinAlg/xSolverBase/: CMakeLists.txt
xMapping/: CMakeLists.txt
xMapping/src/: xLagrangeMapping.cc  xLagrangeMapping.h  xMapping.cc  xMapping.h  xReferenceElement.h
xMapping/test/: CMakeLists.txt
xMeshTool/: CMakeLists.txt
xMeshTool/xDistMesh/: CMakeLists.txt
xMeshTool/xReader/: CMakeLists.txt
xMeshTool/xTemplateRefineMesh/: CMakeLists.txt
xQuadrature/: CMakeLists.txt
xQuadrature/src/: xGaussLegendreSimplex.cc  xGaussLegendreSimplex.h  xGaussQuadratureHex.cc  xGaussQuadratureQuad.cc  xGaussQuadratureTet.cc  xGaussQuadratureTri.cc  xIntPt.h  xIntegrator.h
xTensor/: CMakeLists.txt
xTensor/src/: xPoint.h  xTensor2.cc  xTensor2.h  xTensor2Sym.h  xTensor2_imp.h  xTensor3.h  xTensor4.h  xTensor4_imp.h  xTensorOperations.h  xVector.h  xVectorScalarProd.h  xVector_imp.h
xTool/: CMakeLists.txt  NOTICE
xTool/src/: workInProgress.cc  workInProgress.h  xAspectRatio.h  xDataExchanger.h  xDataExchangerTraits.h  xDataExchanger_imp.h  xDataType.h  xDataType_imp.h  xDeltaMemory.cc  xDeltaMemory.h  xDeltaTime.cc  xDeltaTime.h  xExportStringDist.cc  xExportStringDist.h  xGeneralUnorderedMapDataManager.h  xGenericOperations.h  xIteratorTools.h  xMPIDataType.cc  xMPIDataType.h  xMPIEnv.cc  xMPIEnv.h  xMPITag.cc  xMPITag.h  xMacro.h  xMemoryMonitor.h  xPartitionManager.h  xPartitionManagerTools.h  xPartitionManagerTools_imp.h  xRawDataExchanger.h  xSingleton.h  xStringManager.h  xUnorderedMapDataManager.h
xTool/test/: CMakeLists.txt
xUtil/: NOTICE  (+2 more)
(+732 files in other folders)
